--- a/ADAccountManager/ADAccountManager.csproj
+++ b/ADAccountManager/ADAccountManager.csproj
@@ -50,6 +50,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="System.DirectoryServices" Version="7.0.0" />
+		<PackageReference Include="System.DirectoryServices.AccountManagement" Version="7.0.0" />
 	</ItemGroup>
 
 </Project>
