--- a/ADAccountManager/ADAccountManager.csproj
+++ b/ADAccountManager/ADAccountManager.csproj
@@ -49,8 +49,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CsvHelper" Version="30.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-		<PackageReference Include="System.DirectoryServices" Version="7.0.0" />
+		<PackageReference Include="System.DirectoryServices" Version="7.0.1" />
 		<PackageReference Include="System.DirectoryServices.AccountManagement" Version="7.0.0" />
 	</ItemGroup>
 
