Split the UserService class into 3 separate classes (UserCreator, UserFinder, UserDeleter) with interfaces

--- a/ADAccountManager/ADAccountManager.csproj
+++ b/ADAccountManager/ADAccountManager.csproj
@@ -59,4 +59,8 @@
 	  <Folder Include="Resources\Config\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Include="..\.editorconfig" Link=".editorconfig" />
+	</ItemGroup>
+
 </Project>
