Replaced the GroupService class and interface with 3 separate classes for creating, finding and deleting groups. Renamed UserService classes and fixed all references to those classes

--- a/ADAccountManager/ADAccountManager.csproj
+++ b/ADAccountManager/ADAccountManager.csproj
@@ -57,6 +57,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Resources\Config\" />
+	  <Folder Include="Utilities\PrincipalService\" />
 	</ItemGroup>
 
 	<ItemGroup>
