Changed ConfigService to a static class and removed IConfigService. Created the SettingsPage layout and associated methods.

--- a/ADAccountManager/ADAccountManager.csproj
+++ b/ADAccountManager/ADAccountManager.csproj
@@ -49,6 +49,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Config\appsettings.json" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CsvHelper" Version="30.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="System.DirectoryServices" Version="7.0.1" />
@@ -56,11 +60,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Resources\Config\" />
+	  <None Include="..\.editorconfig" Link=".editorconfig" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Include="..\.editorconfig" Link=".editorconfig" />
+	  <Content Include="Resources\Config\appsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
 	</ItemGroup>
 
 </Project>
