Converted all XAML page definitions to C# viewmodels

--- a/ADAccountManager/ADAccountManager.csproj
+++ b/ADAccountManager/ADAccountManager.csproj
@@ -50,6 +50,7 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Config\appsettings.json" />
+	  <None Remove="Resources\Images\settings.png" />
 	</ItemGroup>
 
 	<ItemGroup>
